----------------------------------------------------------------------
 OmegaT 6.0.2
----------------------------------------------------------------------
  0 Enhancement
  5 Bug fixes
  0 Localisation updates
----------------------------------------------------------------------

  Bug fixes:

  - Preferences/CutomColorSelector don't show notification immediately when modifying color
  https://sourceforge.net/p/omegat/bugs/1273/

  - [Revert regression] List of issues stays hidden in the background
  https://sourceforge.net/p/omegat/bugs/1225/

  - Unit tests failed on Windows
  https://sourceforge.net/p/omegat/bugs/1223/

  - Translation memories are not correctly reloaded after team synchronization
  https://sourceforge.net/p/omegat/bugs/1164/

  - macOS notarization fails with junixsocket libraries
  https://sourceforge.net/p/omegat/bugs/1283/

----------------------------------------------------------------------
 OmegaT 6.0.1 (2024-08-17)
----------------------------------------------------------------------
  0 Enhancement
 16 Bug fixes
  8 Localisation updates
----------------------------------------------------------------------
6.0.1 vs 6.0.0

  Bug fixes:

  - Removal of MED package save/load feature
  https://sourceforge.net/p/omegat/bugs/1266/

  - sdlxliff filter does not display (some) comments
  https://sourceforge.net/p/omegat/bugs/1244/

  - Windows launcher does not launch when without_JRE installer used
  https://sourceforge.net/p/omegat/bugs/1240/

  - Glossary popups behavior changed unintended way
  https://sourceforge.net/p/omegat/bugs/1239/

  - Match statistics are affected by fuzzy match threshold
  https://sourceforge.net/p/omegat/bugs/1236/

  - Repository mapping with SVN cause error
  https://sourceforge.net/p/omegat/bugs/1232/

  - List of issues stays hidden in the background
  https://sourceforge.net/p/omegat/bugs/1225/

  - Selection of match for pre-translation varies through different OS's