@@ -558,7 +558,7 @@
 		  <term id="segmentation.rules.exceptionrule.title"><option>Exceptions</option></term>
 
 		  <listitem>
-			<para>To define an exception rule, leave the <guilabel>Break/Exception
+			<para>To define an exception rule, leave the <guilabel>Break
 			</guilabel>check box unchecked.</para>
 
 			<para>Specify text combinations that are exceptions to a break
@@ -574,7 +574,7 @@
 
 		  <listitem>
 			<para>To define a break rule, check the
-			<guilabel>Break/Exception</guilabel> box.</para>
+			<guilabel>Break</guilabel> box.</para>
 
 			<para>Separates the source text into segments. For example,
 			<emphasis>period followed by a space</emphasis> generally defines a
